# esp-idf-m5stickC

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/MPU6050/: CMakeLists.txt
components/MPU6050/include/: i2c.hpp  mpu6050.hpp
components/MPU6050/src/: i2c.cpp  mpu6050.cpp
components/SSD1306/: CMakeLists.txt
components/SSD1306/include/: font8x8_basic.h  ssd1306.h
components/SSD1306/src/: ssd1306.c  ssd1306_i2c.c  ssd1306_spi.c
components/ST7735S/: CMakeLists.txt
components/ST7735S/include/: fontx.h  st7735s.h
components/ST7735S/src/: fontx.c  st7735s.c
components/UIcode/: CMakeLists.txt
components/UIcode/include/: GuiLite.h  delay.h
components/UIcode/src/: UIcode.cpp  delay.cpp  example-3d-hello.cpp  example-3d-wave.cpp  example-circle.cpp  example-molecular.cpp  example-particle.cpp  example-star-hello.cpp
components/UIcode/src/resources/: Microsoft_YaHei_28.cpp
components/camera/: CMakeLists.txt
components/camera/include/: bitmap.h  led.h  ov2640.h  ov7725.h  qr_recoginize.h  sccb.h  sensor.h  wiring.h  xclk.h
components/camera/src/: qr_recoginize.c
components/http_server/: CMakeLists.txt
components/quirc/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
